--- a/estilo/style.css
+++ b/estilo/style.css
@@ -18,9 +18,10 @@ main{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 311px;
-    height: 624px;
-    background: url(../imagens/frame-iphone.png) no-repeat fixed;
+    width: 342px;
+    height: 640px;
+    background: url(../imagens/foto-cel.png) no-repeat fixed center;
+    background-size: cover;
 }
 #menu{
     position: absolute;
@@ -45,9 +46,11 @@ img{
 }
 iframe{
     position: absolute;
-    top: 80px;
-    left: 22px;
-    width: 263px;
-    height: 468px;
+    top: 35px;
+    left: 40px;
+    width: 262px;
+    height: 569px;
+    border: 1px solid black;
+    border-radius: 26px;
     margin: 0px;
 }
