--- a/estilo/style.css
+++ b/estilo/style.css
@@ -10,7 +10,7 @@ body{
 main{
     position: relative;
     height: 100vh;
-    background: url(../imagens/fundo-madeira.jpg) no-repeat fixed center;
+    background: url(../imagens/4844484.jpg) no-repeat fixed center;
     background-size: cover;
 }
 #tel{
@@ -19,7 +19,7 @@ main{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 342px;
-    height: 640px;
+    height: 643px;
     background: url(../imagens/foto-cel.png) no-repeat fixed center;
     background-size: cover;
 }
@@ -46,11 +46,11 @@ img{
 }
 iframe{
     position: absolute;
-    top: 35px;
-    left: 40px;
-    width: 262px;
-    height: 569px;
-    border: 1px solid black;
-    border-radius: 26px;
+    top: 29px;
+    left: 36px;
+    width: 262.5px;
+    height: 575px;
+    border: 5px solid black;
+    border-radius: 34px;
     margin: 0px;
 }
